# kruger_guariste_ej_2

./: CMakeLists.txt  Readme.md  package.xml
action/: ProcessText.action
launch/: ej.launch.py
src/: text_processor_client.cpp  text_processor_server.cpp
